[gd_scene load_steps=36 format=2]

[ext_resource path="res://Gameplay/TargetMovement.tscn" type="PackedScene" id=1]
[ext_resource path="res://Gameplay/Hitbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://Players/Leafy/Leafy.gd" type="Script" id=3]
[ext_resource path="res://Players/Assets/Leaf Elemental S Sprite Sheet.png" type="Texture" id=4]
[ext_resource path="res://Gameplay/EnemyDetector.tscn" type="PackedScene" id=5]

[sub_resource type="Animation" id=26]
resource_name = "Die"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 44, 56, 57, 58, 59, 60, 73, 74, 75, 76 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:is_dead")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1, 1.001 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=1]
resource_name = "FloatLeft"
length = 0.4
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 49, 50 ]
}

[sub_resource type="Animation" id=2]
resource_name = "FloatRight"
length = 0.4
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 7, 8 ]
}

[sub_resource type="Animation" id=3]
resource_name = "IdleLeft"
length = 0.8
loop = true
step = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 43, 44 ]
}

[sub_resource type="Animation" id=4]
resource_name = "IdleRight"
length = 0.8
loop = true
step = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 1, 2 ]
}

[sub_resource type="Animation" id=5]
resource_name = "PollenLeft"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 77, 78, 79, 80, 81, 82 ]
}

[sub_resource type="Animation" id=6]
resource_name = "PollenRight"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 35, 36, 37, 38, 39, 40 ]
}

[sub_resource type="Animation" id=7]
resource_name = "RunLeft"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 49, 50, 51, 52, 53 ]
}

[sub_resource type="Animation" id=8]
resource_name = "RunRight"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 7, 8, 9, 10, 11 ]
}

[sub_resource type="Animation" id=9]
resource_name = "Spawn"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 76, 75, 74, 73, 60, 59, 58, 57, 56, 44 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:spawned")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="AnimationNodeAnimation" id=27]
animation = "Die"

[sub_resource type="AnimationNodeAnimation" id=10]
animation = "IdleLeft"

[sub_resource type="AnimationNodeAnimation" id=11]
animation = "PollenLeft"

[sub_resource type="AnimationNodeAnimation" id=12]
animation = "RunLeft"

[sub_resource type="AnimationNodeAnimation" id=13]
animation = "Spawn"

[sub_resource type="AnimationNodeStateMachineTransition" id=14]

[sub_resource type="AnimationNodeStateMachineTransition" id=15]

[sub_resource type="AnimationNodeStateMachineTransition" id=16]

[sub_resource type="AnimationNodeStateMachineTransition" id=17]

[sub_resource type="AnimationNodeStateMachineTransition" id=18]

[sub_resource type="AnimationNodeStateMachineTransition" id=19]

[sub_resource type="AnimationNodeStateMachineTransition" id=20]

[sub_resource type="AnimationNodeStateMachineTransition" id=28]

[sub_resource type="AnimationNodeStateMachineTransition" id=29]

[sub_resource type="AnimationNodeStateMachineTransition" id=30]

[sub_resource type="AnimationNodeStateMachine" id=21]
states/Die/node = SubResource( 27 )
states/Die/position = Vector2( 520, 359 )
states/Idle/node = SubResource( 10 )
states/Idle/position = Vector2( 520, 167 )
states/Pollen/node = SubResource( 11 )
states/Pollen/position = Vector2( 387, 268 )
states/Run/node = SubResource( 12 )
states/Run/position = Vector2( 652, 273 )
states/Spawn/node = SubResource( 13 )
states/Spawn/position = Vector2( 520, 75 )
transitions = [ "Spawn", "Idle", SubResource( 14 ), "Idle", "Pollen", SubResource( 15 ), "Pollen", "Idle", SubResource( 16 ), "Idle", "Run", SubResource( 17 ), "Run", "Idle", SubResource( 18 ), "Pollen", "Run", SubResource( 19 ), "Run", "Pollen", SubResource( 20 ), "Idle", "Die", SubResource( 28 ), "Pollen", "Die", SubResource( 29 ), "Run", "Die", SubResource( 30 ) ]
start_node = "Spawn"
graph_offset = Vector2( 128, 148.36 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=22]

[sub_resource type="CapsuleShape2D" id=23]
radius = 2.75597
height = 4.32567

[sub_resource type="CircleShape2D" id=24]
radius = 15.5498

[sub_resource type="CircleShape2D" id=25]
radius = 48.2283

[node name="Leafy" type="KinematicBody2D" groups=[
"Friendly",
]]
collision_layer = 8
collision_mask = 9
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -4 )
texture = ExtResource( 4 )
vframes = 12
hframes = 7
frame = 44
region_rect = Rect2( 3, 0, 0, 0 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Die = SubResource( 26 )
anims/FloatLeft = SubResource( 1 )
anims/FloatRight = SubResource( 2 )
anims/IdleLeft = SubResource( 3 )
anims/IdleRight = SubResource( 4 )
anims/PollenLeft = SubResource( 5 )
anims/PollenRight = SubResource( 6 )
anims/RunLeft = SubResource( 7 )
anims/RunRight = SubResource( 8 )
anims/Spawn = SubResource( 9 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 21 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 22 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 10 )
rotation = 1.5708
shape = SubResource( 23 )

[node name="Hitbox" parent="." instance=ExtResource( 2 )]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( -10, 6 )
shape = SubResource( 24 )

[node name="TargetMovement" parent="." instance=ExtResource( 1 )]
FOLLOW_DISTANCE_MIN = 30
FOLLOW_DISTANCE_MAX = 45

[node name="EnemyDetector" parent="." instance=ExtResource( 5 )]

[node name="CollisionShape2D" parent="EnemyDetector" index="0"]
shape = SubResource( 25 )

[node name="Lifespan" type="Timer" parent="."]
wait_time = 10.0
[connection signal="timeout" from="Lifespan" to="." method="_on_Lifespan_timeout"]

[editable path="Hitbox"]

[editable path="EnemyDetector"]
